--- a/status.html
+++ b/status.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -251,12 +251,12 @@
           let itemClass = '';
 
           if (isCancelled) {
-            icon = 'Cross';           // Real Cross symbol
+            icon = '✗';           // Real Cross symbol
             colorClass = 'status-red cancelled';
             textColor = '#ef4444';
             itemClass = 'cancelled';
           } else if (isCompleted || (isCurrent && !cancelled)) {
-            icon = 'Checkmark';       // Real Checkmark symbol
+            icon = '✓';       // Real Checkmark symbol
             colorClass = 'status-green';
             textColor = '#22c55e';
           }
@@ -297,3 +297,4 @@
 </script>
 </body>
 </html>
+
