--- a/admin.html
+++ b/admin.html
@@ -101,6 +101,9 @@
           </div>
         </div>
         <div>
+  <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
+</div>
+        <div>
           <label>Description</label>
           <textarea id="add-desc"></textarea>
         </div>
@@ -155,5 +158,6 @@
     </div>
   </main>
 </body>
+
 
 </html>
