--- a/product.html
+++ b/product.html
@@ -1,4 +1,3 @@
-<DOCUMENT filename="product.html">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +13,6 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-
 </head>
 <body>
   <header class="site-header">
@@ -30,7 +28,7 @@
     </nav>
   </header>
 
- <main class="container">
+  <main class="container">
     <div id="product-section" class="product-detail">
       <div class="product-images">
         <img id="main-image" src="" alt="">
@@ -38,6 +36,10 @@
       </div>
       <div class="product-info">
         <h1 id="product-name"></h1>
+        <div id="variant-selector" class="variant-selector" style="display: none;">
+          <label id="variant-label"></label>
+          <select id="variant-select"></select>
+        </div>
         <div id="product-color" class="muted"></div>
         <div id="product-price" class="price"></div>
         <div id="product-badges" class="badges"></div>
@@ -51,7 +53,7 @@
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">&times;</button>
+    <button id="close-viewer" class="close-viewer">×</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
@@ -63,14 +65,15 @@
       </div>
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
+        <input type="hidden" id="co-variant-id">
         <div class="row">
           <div>
             <label>Product Name</label>
             <input id="co-product-name" readonly>
           </div>
           <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
+            <label>Variant</label>
+            <input id="co-variant" readonly>
           </div>
         </div>
         <div class="row">
@@ -150,20 +153,20 @@
       </form>
     </div>
   </div>
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-  </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+
+  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000; font-family: Arial, sans-serif;">
+    <div>
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      </a>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
 </body>
 </html>
