--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,6 @@
         <button id="tab-orders">Orders</button>
       </div>
 
-      <!-- PRODUCTS SECTION -->
       <div id="section-products">
         <h2>Add Product</h2>
         <form id="add-product-form" class="form">
@@ -63,17 +62,17 @@
               <input id="add-name" required>
             </div>
             <div>
-              <label>Base Price (tk)</label>
-              <input id="add-price" type="number" min="0" required>
+              <label>Price (tk)</label>
+              <input id="add-price" required>
             </div>
           </div>
           <div class="row">
             <div>
               <label>Discount (tk)</label>
-              <input id="add-discount" type="number" min="0" value="0">
+              <input id="add-discount" value="0">
             </div>
             <div>
-              <label>Base Image URLs (comma-separated)</label>
+              <label>Image URLs (comma-separated)</label>
               <input id="add-images" required>
             </div>
           </div>
@@ -88,14 +87,14 @@
               </select>
             </div>
             <div>
-              <label>Variant Type (e.g. Color, Size)</label>
-              <input id="add-variant-type" placeholder="Leave blank if no variants">
+              <label>Color</label>
+              <input id="add-color">
             </div>
           </div>
           <div class="row">
             <div>
               <label>Stock</label>
-              <input id="add-stock" type="number" min="0" value="0">
+              <input id="add-stock" type="number" value="0">
             </div>
             <div>
               <label>Availability</label>
@@ -107,20 +106,21 @@
             </div>
           </div>
           <div>
+            <label>Variant Type (e.g. Color, Size)</label>
+            <input id="add-variant-type" placeholder="Leave empty if no variants">
+          </div>
+          <div id="variants-container" style="display: none; margin-top: 12px;">
+            <button type="button" id="add-variant-btn">+ Add Variant</button>
+            <div id="variants-list" style="margin-top: 12px; display: grid; gap: 12px;"></div>
+          </div>
+          <div>
             <label>Description</label>
             <textarea id="add-desc"></textarea>
           </div>
-
-          <div id="variants-container" style="display: none; margin-top: 16px;">
-            <h3>Variants</h3>
-            <div id="variants-list"></div>
-            <button type="button" id="add-variant-btn" style="margin-top: 8px;">+ Add Variant</button>
-          </div>
-
-          <button type="submit" style="margin-top: 16px;">Add Product</button>
+          <button type="submit">Add Product</button>
         </form>
 
-        <h2 style="margin-top: 32px;">Products</h2>
+        <h2>Products</h2>
         <div class="table-wrapper">
           <table class="data-table">
             <thead>
@@ -130,7 +130,7 @@
                 <th>Price</th>
                 <th>Category</th>
                 <th>Color</th>
-                <th>Discount</th>
+                <th>Discount (tk)</th>
                 <th>Stock</th>
                 <th>Availability</th>
                 <th>Status</th>
@@ -142,7 +142,6 @@
         </div>
       </div>
 
-      <!-- ORDERS SECTION -->
       <div id="section-orders" style="display: none;">
         <h2>Orders</h2>
         <div class="table-wrapper">
