--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,7 @@
     </nav>
   </header>
 
+ 
   <main class="container">
     <div id="login-panel" class="card" style="display: none;">
       <h2>Admin Login</h2>
@@ -48,127 +49,142 @@
         <button onclick="logoutAdmin()">Logout</button>
       </div>
 
-      <div class="tabs">
-        <button id="tab-products" class="active">Products</button>
-        <button id="tab-orders">Orders</button>
-      </div>
-
-      <div id="section-products">
-        <h2>Add Product</h2>
-        <form id="add-product-form" class="form">
-          <div class="row">
-            <div>
-              <label>Name</label>
-              <input id="add-name" required>
-            </div>
-            <div>
-              <label>Price (tk)</label>
-              <input id="add-price" required>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label>Discount (tk)</label>
-              <input id="add-discount" value="0">
-            </div>
-            <div>
-              <label>Image URLs (comma-separated)</label>
-              <input id="add-images" required>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label>Category</label>
-              <select id="add-category" required>
-                <option value="Keycaps">Keycaps</option>
-                <option value="Switches">Switches</option>
-                <option value="Keyboard and Mouse">Keyboards and Mouse</option>
-                <option value="Accessories and Collectables">Accessories and Collectables</option>
-              </select>
-            </div>
-            <div>
-              <label>Color</label>
-              <input id="add-color">
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label>Stock</label>
-              <input id="add-stock" type="number" value="0">
-            </div>
-            <div>
-              <label>Availability</label>
-              <select id="add-availability" required>
-                <option value="Ready">Ready to Order</option>
-                <option value="Pre Order">Pre Order</option>
-                <option value="Upcoming">Upcoming</option>
-              </select>
-            </div>
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
           </div>
           <div>
-            <label>Variant Type (e.g. Color, Size)</label>
-            <input id="add-variant-type" placeholder="Leave empty if no variants">
+            <label>Price (tk)</label>
+            <input id="add-price" required>
           </div>
-          <div id="variants-container" style="display: none; margin-top: 12px;">
-            <button type="button" id="add-variant-btn">+ Add Variant</button>
-            <div id="variants-list" style="margin-top: 12px; display: grid; gap: 12px;"></div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
           </div>
           <div>
-            <label>Description</label>
-            <textarea id="add-desc"></textarea>
+            <label>Image URLs (comma-separated)</label>
+            <input id="add-images" required>
           </div>
-          <button type="submit">Add Product</button>
-        </form>
-
-        <h2>Products</h2>
-        <div class="table-wrapper">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Category</th>
-                <th>Color</th>
-                <th>Discount (tk)</th>
-                <th>Stock</th>
-                <th>Availability</th>
-                <th>Status</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody id="products-body"></tbody>
-          </table>
         </div>
+        <div class="row">
+          <div>
+            <label>Category</label>
+            <select id="add-category" required>
+              <option value="Keycaps">Keycaps</option>
+              <option value="Switches">Switches</option>
+              <option value="Keyboard and Mouse">Keyboard and Mouse</option>
+              <option value="Accessories and Collectables">Accessories and Collectables</option>
+            </select>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="add-color">
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
+          </div>
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
+        </div>
+        <div>
+  <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
+</div>
+        <div>
+          <label>Description</label>
+          <textarea id="add-desc"></textarea>
+        </div>
+<div>
+  <label>Meta Description (for SEO)</label>
+  <textarea id="add-meta-desc"></textarea>
+</div>
+<div>
+  <label>Core Description (shown on product page)</label>
+  <textarea id="add-core-desc"></textarea>
+</div>
+        <button type="submit">Add Product</button>
+      </form>
+
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Availability</th>
+              <th>Badge</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="products-body"></tbody>
+        </table>
       </div>
 
-      <div id="section-orders" style="display: none;">
-        <h2>Orders</h2>
-        <div class="table-wrapper">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Time</th>
-                <th>Product</th>
-                <th>Variant</th>
-                <th>Qty</th>
-                <th>Delivery</th>
-                <th>Paid</th>
-                <th>Due</th>
-                <th>Name</th>
-                <th>Phone</th>
-                <th>Address</th>
-                <th>Payment</th>
-                <th>Txn ID</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody id="orders-body"></tbody>
-          </table>
-        </div>
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid</th>
+              <th>Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body"></tbody>
+        </table>
       </div>
     </div>
+
+<h2>Notices (Image Board)</h2>
+<form id="add-notice-form" class="form">
+  <div class="row">
+    <div><label>Notice Name</label><input id="notice-name" required></div>
+    <div><label>Image URL</label><input id="notice-url" required></div>
+  </div>
+  <button type="submit">Add Notice</button>
+</form>
+<div class="table-wrapper">
+  <table class="data-table">
+    <thead><tr><th>Name</th><th>Image</th><th>Actions</th></tr></thead>
+    <tbody id="notices-tbody"></tbody>
+  </table>
+</div>
   </main>
+
 </body>
+
+
 </html>
+
+
