--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-
 </head>
 <body>
   <header class="site-header">
@@ -23,7 +22,7 @@
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
+        <a id="login-link" href="user.html">Login</a>
       </div>
     </nav>
   </header>
@@ -38,25 +37,23 @@
     <div id="categories" class="product-list new-hot-list"></div>
   </main>
 
+  <!-- NOTICE BOARD SLIDER (1:1 images, auto slide) -->
+  <div class="container" style="margin:30px auto;">
+    <div id="notice-slider" class="notice-slider"></div>
+  </div>
+
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">&times;</button>
+    <button id="close-viewer" class="close-viewer">×</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+<footer style="background-color:#e8e8ff;padding:20px;text-align:center;height:90px;color:#000;font-family:Arial,sans-serif;">
   <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook" style="width:30px;height:30px;"></a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank"><img src="instagram.png" alt="Instagram" style="width:30px;height:30px;"></a>
+    <a href="https://wa.me/01960902526" target="_blank"><img src="whatsapp.png" alt="WhatsApp" style="width:30px;height:30px;"></a>
   </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
+  <p>© All rights reserved by The Geek Shop</p>
 </footer>
 </body>
 </html>
