--- a/product.html
+++ b/product.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product</title>
+  <title id="product-title">Product</title>
+  <meta name="description" id="meta-description" content="">
   <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="canonical" id="canonical-link" href="">
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+    import { firebaseConfig } from './config.js';
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
   </script>
   <script type="module" src="script.js"></script>
 </head>
@@ -23,7 +28,7 @@
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
+        <a id="login-link" href="user.html">Login</a>
       </div>
     </nav>
   </header>
@@ -31,20 +36,25 @@
  <main class="container">
     <div id="product-section" class="product-detail">
       <div class="product-images">
-        <img id="main-image" src="" alt="">
+        <img id="main-image" src="" alt="Product Image">
         <div id="thumbnail-gallery" class="thumbnail-gallery"></div>
       </div>
       <div class="product-info">
-        <h1 id="product-name"></h1>
+        <h1 id="product-name">Loading...</h1>
         <div id="product-color" class="muted"></div>
-        <div class="variant-selector" id="variant-selector">
-          <label id="variant-label"></label>
-          <select id="variant-select"></select>
-        </div>
         <div id="product-price" class="price"></div>
         <div id="product-badges" class="badges"></div>
         <p id="product-desc"></p>
-        <div id="order-row" class="order-row"></div>
+
+        <!-- QUANTITY + ADD TO CART + BUY NOW -->
+        <div class="order-row" id="order-row">
+          <input type="number" id="qty-input" class="qty" min="1" value="1">
+          <button id="add-to-cart-btn">Add to Cart</button>
+          <button id="buy-now-btn">Buy Now</button>
+        </div>
+
+        <!-- CORE DESCRIPTION (new) -->
+        <div id="product-core-desc" class="core-desc"></div>
       </div>
     </div>
 
@@ -52,11 +62,13 @@
     <div id="other-products" class="product-list new-hot-list"></div>
   </main>
 
+  <!-- IMAGE VIEWER -->
   <div id="image-viewer" class="image-viewer">
     <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
+  <!-- CHECKOUT MODAL -->
   <div id="checkout-modal" class="modal">
     <div class="card modal-content">
       <div class="modal-header">
@@ -65,53 +77,23 @@
       </div>
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
-        <input type="hidden" id="co-variant-id">
         <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Variant</label>
-            <input id="co-variant-name" readonly>
-          </div>
+          <div><label>Product Name</label><input id="co-product-name" readonly></div>
+          <div><label>Color</label><input id="co-color" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
+          <div><label>Price (tk)</label><input id="co-price" readonly></div>
+          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
         </div>
         <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
+          <div><label>Delivery</label><input id="co-delivery" readonly></div>
+          <div><label>Total (tk)</label><input id="co-total" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
+          <div><label>Name</label><input id="co-name" required></div>
+          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
         </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
+        <div><label>Address</label><textarea id="co-address" required></textarea></div>
         <div class="row">
           <div>
             <label>Payment Method</label>
@@ -121,52 +103,50 @@
               <option value="Bkash">Bkash</option>
             </select>
           </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
+          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
+          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
+          <div><label>Due (tk)</label><input id="co-due-amount" readonly></div>
         </div>
+        <div><label>Transaction ID (if paid)</label><input id="co-txn"></div>
         <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
+          <label><input type="checkbox" id="co-policy" required>
             I agree to the <a href="status.html">Order Policy</a>
           </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
         </div>
         <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+
+<footer style="background-color:#e8e8ff;padding:20px;text-align:center;height:90px;color:#000;font-family:Arial,sans-serif;">
   <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook" style="width:30px;height:30px;"></a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank"><img src="instagram.png" alt="Instagram" style="width:30px;height:30px;"></a>
+    <a href="https://wa.me/01960902526" target="_blank"><img src="whatsapp.png" alt="WhatsApp" style="width:30px;height:30px;"></a>
   </div>
- 
-  <p>© All rights reserved by The Geek Shop</p>
+  <p>&copy;copy; All rights reserved by The Geek Shop</p>
 </footer>
+
+<!-- Minimal script to handle login link text & cart (you already have full logic in script.js) -->
+<script type="module">
+  import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+  import { firebaseConfig } from './config.js';
+
+  initializeApp(firebaseConfig);
+  const auth = getAuth();
+
+  // Update login link to show "User" when logged in
+  onAuthStateChanged(auth, (user) => {
+    const link = document.getElementById('login-link');
+    if (user) {
+      link.textContent = 'User';
+    } else {
+      link.textContent = 'Login';
+    }
+  });
+</script>
 </body>
 </html>
