--- a/products.html
+++ b/products.html
@@ -36,11 +36,11 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
-      <div class="nav-links">
-        <a href="products.html">Products</a>
-        <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
-      </div>
+    <div class="nav-links">
+  <a href="products.html">Products</a>
+  <a href="status.html">Order Status</a>
+  <a id="login-link" href="user.html">Login</a>
+</div>
     </nav>
   </header>
 
@@ -63,7 +63,7 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
     <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
-        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
       <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
   </div>
@@ -71,4 +71,5 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
+
 </html>
