--- a/products.html
+++ b/products.html
@@ -36,11 +36,11 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
-    <div class="nav-links">
-  <a href="products.html">Products</a>
-  <a href="status.html">Order Status</a>
-  <a id="login-link" href="user.html">Login</a>
-</div>
+      <div class="nav-links">
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
     </nav>
   </header>
 
