--- a/status.html
+++ b/status.html
@@ -86,11 +86,11 @@
 <header class="site-header">
   <nav>
     <a href="index.html" class="logo"><img src="logo.png" alt="Logo" style="height:40px;"></a>
- <div class="nav-links">
-  <a href="products.html">Products</a>
-  <a href="status.html">Order Status</a>
-  <a id="login-link" href="user.html">Login</a>
-</div>
+    <div class="nav-links">
+      <a href="index.html">Products</a>
+      <a href="status.html">Order Status</a>
+      <a href="admin.html">Admin</a>
+    </div>
   </nav>
 </header>
 <div class="container">
