--- a/product.html
+++ b/product.html
@@ -1,4 +1,3 @@
-<DOCUMENT filename="product.html">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +24,7 @@
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
+        <a href="user.html">User</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
@@ -62,29 +62,6 @@
         <button id="close-modal-btn">Close</button>
       </div>
       <form id="checkout-form" class="form">
-        <input type="hidden" id="co-product-id">
-        <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
-        </div>
         <div class="row">
           <div>
             <label>Delivery</label>
