--- a/products.html
+++ b/products.html
@@ -39,6 +39,7 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
+        <a href="user.html">User</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
