--- a/admin.html
+++ b/admin.html
@@ -21,11 +21,13 @@
       <div class="nav-links">
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
+        <a href="user.html">User</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
   </header>
 
+ 
   <main class="container">
     <div id="login-panel" class="card" style="display: none;">
       <h2>Admin Login</h2>
@@ -48,36 +50,6 @@
         <button onclick="logoutAdmin()">Logout</button>
       </div>
 
-      <!-- Notices Section (Top) -->
-      <h2>Notices</h2>
-      <form id="add-notice-form" class="form">
-        <div class="row">
-          <div>
-            <label>Notice Name</label>
-            <input id="add-notice-name" required>
-          </div>
-          <div>
-            <label>Image URL</label>
-            <input id="add-notice-image" required placeholder="https://...">
-          </div>
-        </div>
-        <button type="submit">Add Notice</button>
-      </form>
-
-      <div class="table-wrapper">
-        <table class="data-table">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Image Preview</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="notices-body"></tbody>
-        </table>
-      </div>
-
-      <!-- Existing Product Section -->
       <h2>Add Product</h2>
       <form id="add-product-form" class="form">
         <div class="row">
@@ -130,8 +102,8 @@
           </div>
         </div>
         <div>
-          <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
-        </div>
+  <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
+</div>
         <div>
           <label>Description</label>
           <textarea id="add-desc"></textarea>
@@ -188,4 +160,7 @@
     </div>
   </main>
 </body>
+
+
 </html>
+
