--- a/index.html
+++ b/index.html
@@ -12,33 +12,7 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-  <style>
-    .notice-slider {
-      margin: 40px auto;
-      max-width: 800px;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    .notice-slide {
-      display: none;
-      width: 100%;
-    }
-    .notice-slide.active {
-      display: block;
-      animation: fadeIn 1s ease-in-out;
-    }
-    .notice-slide img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-  </style>
+
 </head>
 <body>
   <header class="site-header">
@@ -54,7 +28,7 @@
     </nav>
   </header>
 
-  <main class="container">
+ <main class="container">
     <h1>Welcome to The Geek Shop</h1>
 
     <h2>May Interest You</h2>
@@ -62,29 +36,29 @@
 
     <h2>Categories</h2>
     <div id="categories" class="product-list new-hot-list"></div>
-
-    <!-- Notice Slider (Bottom of Home Page) -->
-    <div id="notice-container"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
+    <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
-    <div>
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-      </a>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+        <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+ 
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
+
+
